--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -86,7 +86,7 @@
 					</p>
 				</cms:if>
 
-				<cms:input type="submit" value="Submit" name="submit"/>
+				<cms:input type="submit" value="Отправить" name="submit"/>
 
 			</cms:if>
 		</cms:form>
