--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -69,7 +69,7 @@
 				<p class="comment-input">
 				
 				<div class="demo-content ptl">
-            			   <cms:input type="textarea" class="form-control" name="k_comment" rows="3" placeholder="Введите комментарий..."
+            			   <cms:input type="textarea" class="form-control" name="k_comment" rows="3" placeholder="Введите комментарий ..."
 					validator_msg="required=Пожалуйста, введите комментарий"
 					required="1" />
 				</div>
@@ -89,7 +89,7 @@
 					</p>
 				</cms:if>
 
-				<cms:input type="submit" value="Отправить" name="submit"/>
+				<cms:input type="submit" class="btn btn-sm btn-primary" value="Отправить" name="submit"/>
 
 			</cms:if>
 		</cms:form>
