--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -89,7 +89,7 @@
 					</p>
 				</cms:if>
 
-				<cms:input type="submit" class="btn btn-sm btn-primary" <span class="fui-twitter"></span> value="Отправить" name="submit"/>
+				<cms:input type="submit" class="btn btn-sm btn-primary" value="Отправить" name="submit"/>
 
 			</cms:if>
 		</cms:form>
