--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -86,7 +86,7 @@
 				</p>
 
 			<div class="col-xs-12 col-md-6">
-				<cms:if k_logged_out class="tooltip-inner" >
+				<cms:if k_logged_out >
 					<p class="comment-input ">
 						<label for="captcha"><small>Пожалуйста, введите эти символы в поле ввода внизу</small></label><br>
 						<cms:input class="form-control" type="captcha" name="captcha" format='i-r-t' />
