--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -93,7 +93,7 @@
 					</p>
 				</cms:if>
 			
-				<cms:input type="submit" class="btn btn-sm btn-primary" value="Отправить" name="submit"/>
+				<cms:input type="submit" class="btn btn-sm btn-primary" value="Отправить" name="submit"/><br>
 			</div>
 				
 
