--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -52,7 +52,7 @@
 					</p>
 
 					<p class="comment-input">
-						<cms:input type="text" placeholder="Email (он не будет показан для всех)" class="form-control" name="k_email" size="22" tabindex="2" validator="email" required="1"/>
+						<cms:input type="text" placeholder="Email* (он не будет показан для всех)" class="form-control" name="k_email" size="22" tabindex="2" validator="email" required="1"/>
 						<!--<label for="email"><small>Email * (не будет показан для всех)</small></label>-->
 					</p>
 
