--- a/couch/snippets/comments_form.html
+++ b/couch/snippets/comments_form.html
@@ -1,6 +1,6 @@
 <cms:if k_is_commentable >
 	<div class="comment-form" >
-		<h3>Оставить комментарий</h3>
+		<h3><img src="images/icons/touch.svg" alt=""> Оставить комментарий</h3>
 
 		<cms:form method="post" class="k_form">
 
