--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Flat UI</title>
@@ -9,7 +9,7 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Loading Flat UI -->
-    <link href="css/flat-ui.css" rel="stylesheet">
+    <link href="css/login/flat-ui.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
