--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Loading Flat UI -->
-    <link href="css/login/flat-ui.css" rel="stylesheet">
+    <link href="css/flat-ui.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
