--- a/login.html
+++ b/login.html
@@ -17,6 +17,11 @@
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
     <![endif]-->
+    
+      <style type="text/css">
+        background-color: #1abc9c;
+      </style>
+    
   </head>
   <body>
     <div class="container">
