Revert "Update login.html"
This reverts commit 3f118e286540905060943075d3976195f8d5ab9e.

--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="login">
         <div class="login-screen">
           <div class="login-icon">
             <img src="/images/icons/mail.svg" alt="Welcome to Mail App" />
